# positionsender

./: .gitignore  CMakeLists.txt  README.md
include/PositionSender/Message/: messageListener.h  messageManager.h  msgInfo.h  qMessageListener.h
include/PositionSender/ScreenPosition/: screenPosition.h
include/ScreenPosition/Message/: messageListener.h  messageManager.h  msgInfo.h
include/ScreenPosition/Platform/Linux/: lMessageListener.h
include/ScreenPosition/Platform/QNX/: qMessageListener.h  qMsgInfo.h
include/ScreenPosition/PositionReceiver/: messageProvider.h
include/ScreenPosition/PositionReceiver/queue/: q_cond.h  q_list.h  q_queue.h  q_semaphore.h
include/ScreenPosition/PositionSender/: positionSender.h
src/: test.cpp
src/PositionSender/Message/: messageListener.cpp  messageManager.cpp  qMessageListener.cpp
src/PositionSender/Platform/Linux/: lMessageListener.cpp
src/PositionSender/ScreenPosition/: screenPosition.cpp
src/ScreenPosition/Message/: messageListener.cpp  messageManager.cpp
src/ScreenPosition/Platform/Linux/: lMessageListener.cpp
src/ScreenPosition/Platform/QNX/: qMessageListener.cpp
src/ScreenPosition/PositionReceiver/: messageProvider.cpp
src/ScreenPosition/PositionSender/: positionSender.cpp
